--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy New Year New To Me</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style file/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="nav-text-container">
+        <h1
+          style="font-size: 70px; font-weight: 700; line-height: 76px"
+          class="nav-title"
+        >
+          All Thinks Are <br />
+          Possible If You <br />
+          believe
+        </h1>
+        <p style="color: aliceblue">
+          There are many variation of <br />
+          passate of lorem ipsum agaibl <br />
+          majoritiy have sufferere adlkjkfd <br />
+          some by skhfd hounour or jduhf weds
+        </p>
+        <button class="btn-primary">Contact Us</button>
+      </div>
+    </header>
+    <main>
+      <div class="past-container">
+        <div class="past-profile">
+          <img src="./images/person.png" alt="" />
+        </div>
+        <div class="past-content">
+          <h1 class="past-content-title">My failure of previous year</h1>
+          <p style="padding: 20px; color: rgb(68, 67, 67);
+          font-family: Work Sans;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 26px;
+          letter-spacing: 0%;
+          text-align: left;">
+            Contrary to popular belief, Lorem Ipsum is <br />
+            not simply random text. It has roots in a piece <br />
+            of classical Latin literature from 45 BC, making it over <br />
+            2000 years old. Richard McClintock.
+          </p>
+          <ul style="list-style: disc; font-size: 16px; color: rgb(68, 67, 67);">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, temporibus!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quibusdam!</li>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, quibusdam.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quae?</li>
+          </ul>
+        </div>
+      </div>
+
+     <section class="plan">
+
+        <h1 style="text-align: center;">My Plan</h1>
+
+     </section>
+
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
+
+<!-- <li>Contrary to popular belief, is not simply.</li>
+        <li>Contrary to popular belief, is not simply.</li>
+        <li>Contrary to popular belief, is not simply.</li>
+        <li>Contrary to popular belief, is not simply.</li> -->
