--- a/index.html
+++ b/index.html
@@ -33,33 +33,80 @@
         </div>
         <div class="past-content">
           <h1 class="past-content-title">My failure of previous year</h1>
-          <p style="padding: 20px; color: rgb(68, 67, 67);
-          font-family: Work Sans;
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 26px;
-          letter-spacing: 0%;
-          text-align: left;">
+          <p
+            style="
+              padding: 20px;
+              color: rgb(68, 67, 67);
+              font-family: Work Sans;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 26px;
+              letter-spacing: 0%;
+              text-align: left;
+            "
+          >
             Contrary to popular belief, Lorem Ipsum is <br />
             not simply random text. It has roots in a piece <br />
             of classical Latin literature from 45 BC, making it over <br />
             2000 years old. Richard McClintock.
           </p>
-          <ul style="list-style: disc; font-size: 16px; color: rgb(68, 67, 67);">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, temporibus!</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quibusdam!</li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, quibusdam.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quae?</li>
+          <ul style="list-style: disc; font-size: 16px; color: rgb(68, 67, 67)">
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+              temporibus!
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, quibusdam!
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Provident, quibusdam.
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+              quae?
+            </li>
           </ul>
         </div>
       </div>
 
-     <section class="plan">
+      <section class="plan">
+        <h1
+          style="
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            color: Dark 01;
+            margin-bottom: 20px;
+          "
+        >
+          My Plan
+        </h1>
 
-        <h1 style="text-align: center;">My Plan</h1>
-
-     </section>
-
+        <div class="plan-container">
+          <div class="plan-box">
+            <img src="./images/icons/web.png" alt="" />
+            <h3 style="font-size: 30px; font-weight: 700;">Web Development</h3>
+            <p>I want to start</p>
+          </div>
+          <div class="plan-box">
+            <img src="./images/icons/js.png" alt="" />
+            <h3 font-size: 30px; font-weight: 700;>JavaScript</h3>
+            <p>I want to learn</p>
+          </div>
+          <div class="plan-box">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h3 font-size: 30px; font-weight: 700;>Smoking Habit</h3>
+            <p>I want to end</p>
+          </div>
+          <div class="plan-box">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h3 font-size: 30px; font-weight: 700;>Ecommerce</h3>
+            <p>I want to develop</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
