plan section design added

--- a/index.html
+++ b/index.html
@@ -84,28 +84,37 @@
           My Plan
         </h1>
 
-        <div class="plan-container">
-          <div class="plan-box">
-            <img src="./images/icons/web.png" alt="" />
-            <h3 style="font-size: 30px; font-weight: 700;">Web Development</h3>
-            <p>I want to start</p>
-          </div>
-          <div class="plan-box">
-            <img src="./images/icons/js.png" alt="" />
-            <h3 font-size: 30px; font-weight: 700;>JavaScript</h3>
-            <p>I want to learn</p>
-          </div>
-          <div class="plan-box">
-            <img src="./images/icons/smoke.png" alt="" />
-            <h3 font-size: 30px; font-weight: 700;>Smoking Habit</h3>
-            <p>I want to end</p>
-          </div>
-          <div class="plan-box">
-            <img src="./images/icons/ecom.png" alt="" />
-            <h3 font-size: 30px; font-weight: 700;>Ecommerce</h3>
-            <p>I want to develop</p>
-          </div>
+<div style="margin: 60px 180px;">
+
+    <div class="plan-container">
+        <div class="plan-box">
+          <img src="./images/icons/web.png" alt="" />
+          <h3 style="font-size: 30px; font-weight: 700;">Web Development</h3>
+          <p>I want to start</p>
         </div>
+        <div class="plan-box">
+          <img src="./images/icons/js.png" alt="" />
+          <h3 font-size: 30px; font-weight: 700;>JavaScript</h3>
+          <p>I want to learn</p>
+        </div>
+        <div class="plan-box">
+          <img src="./images/icons/smoke.png" alt="" />
+          <h3 font-size: 30px; font-weight: 700;>Smoking Habit</h3>
+          <p>I want to end</p>
+        </div>
+        <div class="plan-box">
+          <img src="./images/icons/ecom.png" alt="" />
+          <h3 font-size: 30px; font-weight: 700;>Ecommerce</h3>
+          <p>I want to develop</p>
+        </div>
+      </div>
+
+<div class="adver-sec">
+    <h1 class="postivemind-title">Allways keep a positive <br> mindset</h1>
+<button id="call-now-btn" class="btn-primary">Call Now</button>
+</div>
+
+</div>
       </section>
     </main>
 
