--- a/index.html
+++ b/index.html
@@ -84,41 +84,72 @@
           My Plan
         </h1>
 
-<div style="margin: 60px 180px;">
+        <div style="margin: 60px 180px">
+          <div class="plan-container">
+            <div class="plan-box">
+              <img src="./images/icons/web.png" alt="" />
+              <h3 style="font-size: 30px; font-weight: 700">Web Development</h3>
+              <p>I want to start</p>
+            </div>
+            <div class="plan-box">
+              <img src="./images/icons/js.png" alt="" />
+              <h3 font-size: 30px; font-weight: 700;>JavaScript</h3>
+              <p>I want to learn</p>
+            </div>
+            <div class="plan-box">
+              <img src="./images/icons/smoke.png" alt="" />
+              <h3 font-size: 30px; font-weight: 700;>Smoking Habit</h3>
+              <p>I want to end</p>
+            </div>
+            <div class="plan-box">
+              <img src="./images/icons/ecom.png" alt="" />
+              <h3 font-size: 30px; font-weight: 700;>Ecommerce</h3>
+              <p>I want to develop</p>
+            </div>
+          </div>
 
-    <div class="plan-container">
-        <div class="plan-box">
-          <img src="./images/icons/web.png" alt="" />
-          <h3 style="font-size: 30px; font-weight: 700;">Web Development</h3>
-          <p>I want to start</p>
+          <div class="adver-sec">
+            <h1 class="postivemind-title">
+              Allways keep a positive <br />
+              mindset
+            </h1>
+            <button id="call-now-btn" class="btn-primary">Call Now</button>
+          </div>
         </div>
-        <div class="plan-box">
-          <img src="./images/icons/js.png" alt="" />
-          <h3 font-size: 30px; font-weight: 700;>JavaScript</h3>
-          <p>I want to learn</p>
-        </div>
-        <div class="plan-box">
-          <img src="./images/icons/smoke.png" alt="" />
-          <h3 font-size: 30px; font-weight: 700;>Smoking Habit</h3>
-          <p>I want to end</p>
-        </div>
-        <div class="plan-box">
-          <img src="./images/icons/ecom.png" alt="" />
-          <h3 font-size: 30px; font-weight: 700;>Ecommerce</h3>
-          <p>I want to develop</p>
-        </div>
-      </div>
-
-<div class="adver-sec">
-    <h1 class="postivemind-title">Allways keep a positive <br> mindset</h1>
-<button id="call-now-btn" class="btn-primary">Call Now</button>
-</div>
-
-</div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="left-side">
+          <h1 class="ftitle">Future</h1>
+          <br />
+          <p>
+            There are many variations of passages <br />
+            of Lorem Ipsum available, but the majority <br />
+            have suffered alteration in some form, by injected humour, <br />
+            or randomised words
+          </p>
+          <br />
+          <p>email:sourovmh11@gmail.com</p>
+          <br />
+          <p>phone:+8801786843395</p>
+          <br />
+          <div class="icon">
+            <img src="./images/icons/fb.png" alt="" /><img
+              src="./images/icons/twitter.png"
+              alt=""
+            /><img src="./images/icons/youtube.png" alt="" />
+          </div>
+        </div>
+        <div class="right-side">
+          <h2 style="color: white">Subscribe</h2>
+          <br />
+          <input style="width: 300px; height: 50px; padding: 5px;" type="text" name="" id="" placeholder="your email" /> <br /> <br>
+          <button style="width: 160px; height: 30px;">Submit</button>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 
